# elk_search

./: README.md  instruction.txt  requirements.txt
infra/: docker-compose.yml
src/: Dockerfile  ai.py  entrypoint.sh  exceptions.py  main.py  pyproject.toml
src/config/: config_prod.yaml  config_test.yaml  project_config.py
src/config/elk/: data_migration.py  elk_config.py  elk_helper.py  startup.py
src/controllers/v1/: search_controller.py  swagger_controller.py
src/schemas/v1/: search_schema.py
src/services/v1/: search_service.py
src/tests/unit/controllers/: test_search_controller.py
src/tests/unit/services/: test_search_service.py
