[tool.poetry]
name = "swith"
version = "0.1.0"
description = ""
authors = ["aslan <baristan1aslan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
elasticsearch = "^8.13.1"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
aiohttp = "^3.9.5"
faker = "^25.2.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
